# ReloHelp

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.cursor/rules/: backend.mdc  frontend.mdc  project.mdc
.github/workflows/: check_backend.yml  check_frontend.yml  deploy.yml  docker.yml  mcp-tests.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_conversations_table.py  b2c3d4e5f6a7_add_memory_and_messages.py  ebc03eaf0376_initial_auth.py
backend/app/: main.py
backend/app/api/v1/routes/: __init__.py  ai.py  auth.py  internal.py  ping.py
backend/app/api/v1/schemas/: ai.py  auth.py
backend/app/cache/: __init__.py  redis.py
backend/app/core/: config.py  cookies.py  dependencies.py  email.py  langfuse_client.py  logger.py  password_policy.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  conversation.py  email_verification.py  memory.py  message.py  password_reset.py  session.py  user.py
backend/app/mcp/: __init__.py  run_server.py  server.py
backend/app/services/: __init__.py  ai_agent.py  embeddings.py  memory.py  messages.py
backend/app/storage/: __init__.py  s3.py
backend/app/templates/email/: base.html  base.txt  password_reset.html  password_reset.txt  verification.html  verification.txt
backend/scripts/: init.sh  migrate.sh
backend/tests/: conftest.py  test_client.py
backend/tests/api/: test_ai_routes.py  test_auth_routes.py  test_internal_routes.py  test_ping.py
backend/tests/unit/cache/: test_redis_cache.py
backend/tests/unit/core/: test_config.py  test_cookies.py  test_dependencies.py  test_email.py  test_password_policy.py  test_rate_limit.py  test_security.py
backend/tests/unit/db/: test_models.py
backend/tests/unit/schemas/: test_ai_schemas.py  test_auth_schemas.py
backend/tests/unit/services/: test_ai_agent.py  test_embeddings.py  test_memory.py  test_messages.py
backend/tests/unit/storage/: test_s3.py
deploy/: README.md  deploy.sh  docker-compose.prod.yml  install-server.sh
deploy/nginx/: api.template.conf  (+1 more)
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
mcp/: .gitignore  Dockerfile  README.md  pyproject.toml
mcp/app/: config.py  rag.py  rag_ingest.py  run_server.py  server.py
mcp/tests/: conftest.py  test_config.py  test_firecrawl.py  test_rag.py  test_rag_eval.py  test_server.py
research/: .gitignore  README.md  merged.csv  pyproject.toml  rag_pipeline.py  translate_csv.py
research/telegram_scrapper/: .gitignore  batch_export.py  chats.json  check_scv_readability.py  docs.md  export.py  pyproject.toml
research/telegram_scrapper/notebooks/: csv_readability.py
research/telegram_scrapper/telegram_scrapper/: batch_export.py  export.py
telegram_scrapper/: .env.example  .gitignore  __init__.py  chats.json  check_scv_readability.py  export.py  logging.ini  merged.csv  my_export.csv  requirements.txt
(+51 files in other folders)
