[project]
name = "relohelp-mcp"
version = "0.1.0"
description = "Relohelp MCP server (separate from backend)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.9.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
lint = [
    "black>=25.9.0",
    "isort>=7.0.0",
]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
]

[tool.isort]
profile = "black"
