[project]
name = "research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
    "marimo>=0.23.6",
    "ollama>=0.6.2",
    "pandas>=3.0.3",
    "tqdm>=4.67.3",
]
