[project]
name = "research"
version = "0.1.0"
description = "Telegram scraper, RAG pipeline, and research notebooks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.23.6",
    "pandas>=3.0.3",
]

[dependency-groups]
rag = [
    "chromadb>=1.5.9",
    "ollama>=0.6.2",
    "tqdm>=4.67.3",
]
telegram = [
    "coloredlogs>=15.0.1,<16",
    "python-dotenv>=1.0.0,<2",
    "telethon>=1.36.0,<2",
]
translate = [
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telegram_scrapper/telegram_scrapper"]
