[project]
name = "telegram-scrapper"
version = "0.1.0"
description = "Telegram chat export to CSV (Telethon)"
readme = "docs.md"
requires-python = ">=3.13"
dependencies = [
    "coloredlogs>=15.0.1,<16",
    "marimo>=0.23.6",
    "pandas>=3.0.0",
    "python-dotenv>=1.0.0,<2",
    "telethon>=1.36.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telegram_scrapper"]
